--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,13 @@
 {
-  "version": 2,
-  "builds": [
+    "headers": [
       {
-          "src": "/",
-          "use": "@vercel/node"
+        "source": "/api/(.*)",
+        "headers": [
+          { "key": "Access-Control-Allow-Credentials", "value": "true" },
+          { "key": "Access-Control-Allow-Origin", "value": "*" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET,DELETE,PATCH,POST,PUT" },
+          { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+        ]
       }
-  ],
-  "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "/",
-          "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-          "headers":{
-              "Access-Control-Allow-Origin": "*"
-          }
-      }
-  ]
-}
+    ]
+  }
