--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "crisp-sdk-web": "^1.0.22",
     "lucide-react": "^0.306.0",
     "micromark-util-decode-numeric-character-reference": "^2.0.1",
-    "next": "14.0.4",
+    "next": "^14.1.4",
     "openai": "^4.28.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
@@ -48,7 +48,7 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.10.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.1.4",
     "postcss": "^8",
     "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
